# pica

./: CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  README.md  docker-compose.data.yml  docker-compose.yml
.github/workflows/: CI-API.yaml  CI-ARCHIVER.yaml  CI-DATABASE.yaml  CI-MERGE.yaml  CI-OAUTH.yaml  CI-SEED.yaml  CI-WATCHDOG.yaml  build-api.yaml  build-archiver.yaml  build-database.yaml  build-oauth.yaml  build-watchdog.yaml
api/: Cargo.toml
api/src/: main.rs  server.rs
api/tests/: context.rs
archiver/: Cargo.toml
archiver/src/: main.rs
cache/: Cargo.toml
cache/src/: local.rs  remote.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/algebra/: handler.rs
cli/src/domain/: constant.rs  steps.rs
cli/src/service/: command.rs  helper.rs  printer.rs  server.rs
core-api/: Dockerfile
core-api/src/: main.rs
core-api/tests/: context.rs
core-archiver/: Dockerfile
core-archiver/src/: main.rs
core-cache/: Cargo.toml
core-cache/src/: local.rs  remote.rs
core-database/: Cargo.toml  Dockerfile
core-database/src/: main.rs
core-database/tests/: context.rs
core-domain/: Cargo.toml
core-unified/: Cargo.toml
core-unified/src/: client.rs  unified.rs
core-watchdog/: Dockerfile
database/: Cargo.toml  README.md
database/src/: main.rs  (+1 more)
entities/: Cargo.toml
integrationos-api/: Cargo.toml
integrationos-archiver/: Cargo.toml
integrationos-domain/: Cargo.toml
integrationos-unified/: Cargo.toml
integrationos-watchdog/: Cargo.toml
oauth/: package.json
osentities/: Cargo.toml
unified/: Cargo.toml
watchdog/: Cargo.toml
(+259 files in other folders)
