[package]
name = "pica"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"

[dependencies]
axum.workspace = true
clap = { version = "4.5.30", features = ["derive"] }
clap_complete = "4.5.45"
clap_mangen = "0.2.26"
config = { version = "0.15.8", features = ["ini", "json", "toml"] }
directories = "6.0.0"
entities = { git = "https://github.com/picahq/pica.git", branch = "fix/using-prod-api" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shlex = "1.3.0"
tabled.workspace = true
tokio = { workspace = true, features = ["full"] }
toml = "0.8.20"
url = "2.5.4"
urlencoding = "2.1.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pica"
path = "src/main.rs"
